metadata/force-app/main/default/objects/CustomName_flwKF__c/CustomName_flwKF__c.object-meta.xml
<CustomObject>
    <description>Description_umNSE</description>
    <label>CustomLabel_fFEAR</label>
    <nameField>
        <label>CustomLabel_fFEAR</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_fFEARs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>