metadata/force-app/main/default/objects/CustomName_flwKF__c/fields/CustomField_vZMjT__c.field-meta.xml
<CustomField>
    <fullName>CustomField_vZMjT__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldzTgoo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>