metadata/force-app/main/default/objects/CustomName_flwKF__c/fields/CustomField_wVCum__c.field-meta.xml
<CustomField>
    <fullName>CustomField_wVCum__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldUGyck</label>
    <length>255</length>
    <type>Text</type>
</CustomField>